Simplified color ramps, added ramps to theme, put ramps in form instead of example

--- a/src/ThemeForm/ThemeForm.module.css
+++ b/src/ThemeForm/ThemeForm.module.css
@@ -1,6 +1,12 @@
 .ThemeForm {
 }
 
-.contrastRatios {
+.swatches {
   margin: 16px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.swatch {
+  flex: 0 0 25%;
 }
