--- a/src/Examples/Examples.module.css
+++ b/src/Examples/Examples.module.css
@@ -1,16 +1,3 @@
-.subtitle {
-  font-size: 0.8rem;
-  color: #666;
-  font-weight: normal;
-}
-
-.swatch {
-  display: inline-block;
-  height: 1.5rem;
-  width: 1.5rem;
-  margin-right: 0.5rem;
-  border-radius: 0.75rem;
-  border: 1px solid #ccc;
-  box-shadow: 0 0 2px 0 white;
-  vertical-align: middle;
+.Example {
+  overflow-y: auto;
 }
