You can add and delete base colors

--- a/src/ThemeForm/Control/Control.module.css
+++ b/src/ThemeForm/Control/Control.module.css
@@ -3,10 +3,14 @@
 }
 
 .label {
-  display: block;
-  margin-bottom: 5px;
+  
+}
+
+.delete {
+
 }
 
 .input {
   width: 100%;
+  margin-top: 5px;
 }
