--- a/workspaces/themed-ui/src/Card/Card.module.css
+++ b/workspaces/themed-ui/src/Card/Card.module.css
@@ -5,6 +5,16 @@
   visibility: visible;
 }
 
+.Card > :not(:first-child) {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.Card > :not(:last-child) {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .Head {
   border-style: solid;
   border-width: 0 0 1px;
