--- a/workspaces/themed-ui/src/Card/Card.module.css
+++ b/workspaces/themed-ui/src/Card/Card.module.css
@@ -1,4 +1,5 @@
 .Card {
+  box-sizing: border-box;
   border-style: solid;
   border-width: 1px;
   border-color: inherit;
@@ -16,11 +17,17 @@
 }
 
 .Head {
+  box-sizing: border-box;
   border-style: solid;
   border-width: 0 0 1px;
 }
 
+.Body {
+  box-sizing: border-box;
+}
+
 .Foot {
+  box-sizing: border-box;
   border-style: solid;
   border-width: 1px 0 0;
 }
